# algorithmssite.github.io

./: .gitignore  Cargo.toml  README.md  index.html  index.js  main.js  package.json  rollup.config.js  server.py
assets/: index.html
assets/sass/: _base.sass  article.sass  donate.sass  home.sass  style.sass
assets/templates/: index.html
css/: style.css
deep-translator/: Cargo.toml
deep-translator/src/: detection.rs  lib.rs  main.rs
js/: Cargo-CtAvGXmv.js  Cargo-Pl_I13dS.js  algorithmssite-page.js  bundle.js  index.js
js/assets/: algorithmssite_page-03de4303.wasm  algorithmssite_page-04bfcfff.wasm  algorithmssite_page-068f2653.wasm  algorithmssite_page-06bbf834.wasm  algorithmssite_page-08729c70.wasm  algorithmssite_page-0a571f49.wasm  algorithmssite_page-0e2916b3.wasm  algorithmssite_page-102b65d1.wasm  algorithmssite_page-134c3b47.wasm  algorithmssite_page-1357a51f.wasm  algorithmssite_page-146a2a5e.wasm  algorithmssite_page-191e79f5.wasm  algorithmssite_page-1cf5eef2.wasm  algorithmssite_page-217c7c6a.wasm  algorithmssite_page-2940898f.wasm  algorithmssite_page-297dcd7a.wasm  algorithmssite_page-2b53f201.wasm  algorithmssite_page-2f657fab.wasm  algorithmssite_page-2f9a0a92.wasm  algorithmssite_page-32b8bac4.wasm  algorithmssite_page-34eab4d9.wasm  algorithmssite_page-47173516.wasm  algorithmssite_page-47457075.wasm  algorithmssite_page-47a7561f.wasm  algorithmssite_page-4c4ec7c5.wasm  algorithmssite_page-5363817d.wasm  algorithmssite_page-56eab82d.wasm  algorithmssite_page-58392e93.wasm  algorithmssite_page-59763333.wasm  algorithmssite_page-5d0e837c.wasm  algorithmssite_page-5ec202ea.wasm  algorithmssite_page-615847ac.wasm  algorithmssite_page-6b4a0f49.wasm  (+76 more)
rust/: lib.rs
src/: lib.rs
(+12 files in other folders)
