[package]
name = "algorithmssite-page"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "*"
wasm-bindgen = "*"
js-sys = "*"

[dependencies.web-sys]
version = "*"
features = [
    "Document", "Window", "HtmlElement", "DomRect", "Element", "Node", "NodeList",
    "CssStyleDeclaration"
]
