[package]
name = "algorithmssite-page"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "*", features = ["csr"] }
wasm-bindgen = "*"
js-sys = "*"
deep-translator = { path = "./deep-translator" }
wasm-bindgen-futures = "0.4.34"

[dependencies.web-sys]
version = "*"
features = [
    "Document", "Window", "HtmlElement", "DomRect", "Element", "Node", "NodeList",
    "CssStyleDeclaration", "Response", "XmlHttpRequest", "HtmlLinkElement",
    "HtmlDocument", "HtmlInputElement", "Location", "FormData", "HtmlFormElement",
    "RequestInit", "Request", "Response", "HtmlScriptElement"
]
