[package]
name = "algorithmssite-page"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"


[dependencies.yew]
version = "0.20"
features = ["csr"]

[dependencies.web-sys]
version = "0.3.69"
features = [
    "Document", "Window", "HtmlElement", "DomRect", "Element", "Node", "NodeList",
    "CssStyleDeclaration", "Response", "XmlHttpRequest", "HtmlLinkElement",
    "HtmlDocument", "HtmlInputElement", "Location", "FormData", "HtmlFormElement",
    "RequestInit", "Request", "Response", "HtmlScriptElement"
]

